# Alura-Store-25

./: .gitignore  1.analise_faturamento.py  2.vendas_por_categoria.py  3.media_avaliacao_loja.py  4.produtos_mais_menos_vendidos.py  5.frete_medio_loja.py  analise_dos_dados.py  dados.py  gerenciadorCSV.py  pyproject.toml
